--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -110,6 +110,7 @@
         android:id="@+id/RIESGO"
         android:layout_width="125dp"
         android:layout_height="90dp"
+        android:layout_marginTop="2dp"
         android:background="#4588BC"
         android:onClick="TipoFactores"
         android:text="FACTORES DE RIESGO"
@@ -120,7 +121,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@+id/divider2"
-        app:layout_constraintVertical_bias="0.089" />
+        app:layout_constraintVertical_bias="0.036" />
 
     <ImageView
         android:id="@+id/imageView4"
@@ -148,7 +149,7 @@
         android:id="@+id/OBSERVACION"
         android:layout_width="125dp"
         android:layout_height="90dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="2dp"
         android:background="#4588BC"
         android:onClick="observaciones"
         android:text="NOTAS"
@@ -160,7 +161,7 @@
         android:id="@+id/OBSERVACION2"
         android:layout_width="290dp"
         android:layout_height="35dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="5dp"
         android:background="#8BC34A"
         android:onClick="GuardarPersona"
         android:text="GUARDAR PERSONA"
@@ -188,12 +189,12 @@
         android:id="@+id/divider2"
         android:layout_width="290dp"
         android:layout_height="1dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="5dp"
         android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fecha" />
+        app:layout_constraintTop_toBottomOf="@+id/efector" />
 
     <View
         android:id="@+id/divider6"
