--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -7,6 +7,19 @@
     android:background="#4A4A4A"
     tools:context=".persona">
 
+    <Button
+        android:id="@+id/OBSERVACION2"
+        android:layout_width="290dp"
+        android:layout_height="35dp"
+        android:background="#8BC34A"
+        android:onClick="GuardarPersona"
+        android:text="GUARDAR PERSONA"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/constraintLayout3"
+        app:layout_constraintStart_toStartOf="@+id/constraintLayout5"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout3" />
+
     <EditText
         android:id="@+id/DNI"
         android:layout_width="240dp"
@@ -63,6 +76,58 @@
         app:layout_constraintStart_toEndOf="@+id/imageView4"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="63dp"
+        android:layout_height="31dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginTop="40dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/usuario" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="27dp"
+        android:layout_height="53dp"
+        android:layout_marginTop="28dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.472"
+        app:layout_constraintStart_toStartOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:srcCompat="@drawable/dni" />
+
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="32dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        app:srcCompat="@drawable/calendario" />
+
+    <ImageView
+        android:id="@+id/imageView9"
+        android:layout_width="33dp"
+        android:layout_height="26dp"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView6"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView6"
+        app:layout_constraintTop_toBottomOf="@+id/imageView6"
+        app:srcCompat="@drawable/hospital" />
+
+    <Spinner
+        android:id="@+id/efector"
+        android:layout_width="242dp"
+        android:layout_height="40dp"
+        android:background="#4588BC"
+        app:layout_constraintStart_toStartOf="@+id/textViewfechanac2"
+        app:layout_constraintTop_toBottomOf="@+id/textViewfechanac2" />
+
     <TextView
         android:id="@+id/fecha"
         android:layout_width="wrap_content"
@@ -106,85 +171,6 @@
         app:layout_constraintStart_toStartOf="@+id/DNI"
         app:layout_constraintTop_toBottomOf="@+id/fecha" />
 
-    <Button
-        android:id="@+id/RIESGO"
-        android:layout_width="125dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="2dp"
-        android:background="#4588BC"
-        android:onClick="TipoFactores"
-        android:text="FACTORES DE RIESGO"
-        android:textColor="#FFFFFF"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/VACUNA"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/divider2"
-        app:layout_constraintTop_toBottomOf="@+id/divider2"
-        app:layout_constraintVertical_bias="0.036" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="63dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="40dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/usuario" />
-
-    <Button
-        android:id="@+id/VACUNA"
-        android:layout_width="125dp"
-        android:layout_height="90dp"
-        android:background="#4588BC"
-        android:onClick="TiposVacuna"
-        android:text="VACUNAS"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/divider2"
-        app:layout_constraintTop_toTopOf="@+id/RIESGO" />
-
-    <Button
-        android:id="@+id/OBSERVACION"
-        android:layout_width="125dp"
-        android:layout_height="90dp"
-        android:layout_marginTop="2dp"
-        android:background="#4588BC"
-        android:onClick="observaciones"
-        android:text="NOTAS"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toEndOf="@+id/divider2"
-        app:layout_constraintTop_toBottomOf="@+id/VACUNA" />
-
-    <Button
-        android:id="@+id/OBSERVACION2"
-        android:layout_width="290dp"
-        android:layout_height="35dp"
-        android:layout_marginTop="5dp"
-        android:background="#8BC34A"
-        android:onClick="GuardarPersona"
-        android:text="GUARDAR PERSONA"
-        android:textColor="#000000"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/OBSERVACION"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toStartOf="@+id/CONTACTO"
-        app:layout_constraintTop_toBottomOf="@+id/OBSERVACION" />
-
-    <Button
-        android:id="@+id/CONTACTO"
-        android:layout_width="125dp"
-        android:layout_height="90dp"
-        android:background="#4588BC"
-        android:onClick="Contactos"
-        android:text="CONTACTO"
-        android:textColor="#FFFFFF"
-        app:layout_constraintEnd_toStartOf="@+id/OBSERVACION"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/RIESGO"
-        app:layout_constraintTop_toTopOf="@+id/OBSERVACION" />
-
     <View
         android:id="@+id/divider2"
         android:layout_width="290dp"
@@ -199,67 +185,167 @@
     <View
         android:id="@+id/divider6"
         android:layout_width="1dp"
-        android:layout_height="65dp"
+        android:layout_height="75dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/divider8"
         app:layout_constraintEnd_toStartOf="@+id/NOMBRE"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.49" />
+        app:layout_constraintTop_toTopOf="@+id/APELLIDO"
+        app:layout_constraintVertical_bias="0.0" />
 
     <View
         android:id="@+id/divider8"
         android:layout_width="1dp"
-        android:layout_height="150dp"
+        android:layout_height="160dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/divider2"
         app:layout_constraintEnd_toEndOf="@+id/divider6"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/divider6"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.861" />
+        app:layout_constraintVertical_bias="0.953" />
 
-    <ImageView
-        android:id="@+id/imageView5"
-        android:layout_width="27dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="28dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView4"
-        app:layout_constraintHorizontal_bias="0.472"
-        app:layout_constraintStart_toStartOf="@+id/imageView4"
-        app:layout_constraintTop_toBottomOf="@+id/imageView4"
-        app:srcCompat="@drawable/dni" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout2"
+        android:layout_width="125dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintStart_toStartOf="@+id/divider2"
+        app:layout_constraintTop_toBottomOf="@+id/divider2">
 
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="32dp"
-        android:layout_height="23dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView5"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView5"
-        app:layout_constraintTop_toBottomOf="@+id/imageView5"
-        app:srcCompat="@drawable/calendario" />
+        <TextView
+            android:id="@+id/RIESGO"
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal|center_vertical"
+            android:onClick="TipoFactores"
+            android:text="FACTORES DE RIESGO"
+            android:textColor="#FFFFFF"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <Spinner
-        android:id="@+id/efector"
-        android:layout_width="242dp"
-        android:layout_height="40dp"
-        android:background="#4588BC"
-        app:layout_constraintStart_toStartOf="@+id/textViewfechanac2"
-        app:layout_constraintTop_toBottomOf="@+id/textViewfechanac2" />
+        <TextView
+            android:id="@+id/AvanceRiesgo"
+            android:layout_width="125dp"
+            android:layout_height="20dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal"
+            android:onClick="TipoFactores"
+            android:text="0/1"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="@+id/RIESGO"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/RIESGO" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <ImageView
-        android:id="@+id/imageView9"
-        android:layout_width="33dp"
-        android:layout_height="26dp"
-        android:layout_marginTop="32dp"
-        app:layout_constraintEnd_toEndOf="@+id/imageView6"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView6"
-        app:layout_constraintTop_toBottomOf="@+id/imageView6"
-        app:srcCompat="@drawable/hospital" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout4"
+        android:layout_width="125dp"
+        android:layout_height="80dp"
+        app:layout_constraintEnd_toEndOf="@+id/divider2"
+        app:layout_constraintTop_toTopOf="@+id/constraintLayout2">
+
+        <TextView
+            android:id="@+id/VACUNA"
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal|center_vertical"
+            android:onClick="TiposVacuna"
+            android:text="VACUNAS"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/AvanceVacunas"
+            android:layout_width="125dp"
+            android:layout_height="20dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal"
+            android:onClick="TiposVacuna"
+            android:text="0/2"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="@+id/VACUNA"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/VACUNA"
+            app:layout_constraintTop_toBottomOf="@+id/VACUNA" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout3"
+        android:layout_width="125dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="@+id/constraintLayout4"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">
+
+        <TextView
+            android:id="@+id/OBSERVACION"
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal|center_vertical"
+            android:onClick="observaciones"
+            android:text="NOTAS"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/AvanceObservaciones"
+            android:layout_width="125dp"
+            android:layout_height="20dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal"
+            android:onClick="observaciones"
+            android:text="0/2"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="@+id/OBSERVACION"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/OBSERVACION"
+            app:layout_constraintTop_toBottomOf="@+id/OBSERVACION" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout5"
+        android:layout_width="125dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="5dp"
+        app:layout_constraintEnd_toEndOf="@+id/constraintLayout2"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">
+
+        <TextView
+            android:id="@+id/CONTACTO"
+            android:layout_width="125dp"
+            android:layout_height="60dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal|center_vertical"
+            android:onClick="Contactos"
+            android:text="CONTACTO"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/AvanceContacto"
+            android:layout_width="125dp"
+            android:layout_height="20dp"
+            android:background="#4588BC"
+            android:gravity="center_horizontal"
+            android:onClick="Contactos"
+            android:text="0/3"
+            android:textColor="#FFFFFF"
+            app:layout_constraintEnd_toEndOf="@+id/CONTACTO"
+            app:layout_constraintStart_toStartOf="@+id/CONTACTO"
+            app:layout_constraintTop_toBottomOf="@+id/CONTACTO" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
