Cambie el proveedor de ubicacion de network a gps, obtengo valores con mas decimales (Falta comprobar). Falta revisar lo de la version de android.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,12 +41,13 @@
         android:layout_width="180dp"
         android:layout_height="41dp"
         android:layout_marginTop="20dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:ems="10"
         android:hint="CALLE"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textColorHighlight="#4588BC"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#4A4A4A"
         android:textColorLink="#4588BC"
         android:textCursorDrawable="@color/common_google_signin_btn_text_dark_default"
         android:textSize="18sp"
@@ -71,11 +72,12 @@
         android:id="@+id/NUMERO"
         android:layout_width="101dp"
         android:layout_height="40dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:ems="10"
         android:hint="N°"
         android:inputType="number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#4A4A4A"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -164,12 +166,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="12dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:ems="10"
         android:gravity="center_horizontal"
         android:hint="00"
         android:inputType="number"
-        android:textColor="#FFFFFF"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#000000"
+        android:textColorHint="#4A4A4A"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
         app:layout_constraintHorizontal_bias="1.0"
