--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -24,14 +24,14 @@
         android:id="@+id/DNI"
         android:layout_width="240dp"
         android:layout_height="43dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:ems="10"
         android:hint="DNI"
         android:inputType="number"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textColorHighlight="#4588BC"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#4A4A4A"
         android:textColorLink="#4588BC"
-        android:textCursorDrawable="@color/common_google_signin_btn_text_dark_default"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -42,15 +42,15 @@
         android:id="@+id/NOMBRE"
         android:layout_width="240dp"
         android:layout_height="44dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:cursorVisible="true"
         android:ems="10"
         android:hint="NOMBRE"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textColorHighlight="#4588BC"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#4A4A4A"
         android:textColorLink="#4588BC"
-        android:textCursorDrawable="@color/common_google_signin_btn_text_dark_default"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,15 +61,15 @@
         android:id="@+id/APELLIDO"
         android:layout_width="240dp"
         android:layout_height="46dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
         android:ems="10"
         android:hint="APELLIDO"
         android:inputType="textPersonName"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textColorHighlight="#4588BC"
-        android:textColorHint="#FFFFFF"
+        android:textColorHint="#4A4A4A"
         android:textColorLink="#4588BC"
-        android:textCursorDrawable="@color/common_google_signin_btn_text_dark_default"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
@@ -186,13 +186,14 @@
         android:id="@+id/divider6"
         android:layout_width="1dp"
         android:layout_height="75dp"
+        android:layout_marginTop="10dp"
         android:background="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/divider8"
         app:layout_constraintEnd_toStartOf="@+id/NOMBRE"
         app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="@+id/APELLIDO"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.592" />
 
     <View
         android:id="@+id/divider8"
