--- a/app/src/main/res/layout/activity_persona.xml
+++ b/app/src/main/res/layout/activity_persona.xml
@@ -39,6 +39,24 @@
         app:layout_constraintTop_toBottomOf="@+id/NOMBRE" />
 
     <EditText
+        android:id="@+id/EFECTOR"
+        android:layout_width="240dp"
+        android:layout_height="43dp"
+        android:background="@drawable/common_google_signin_btn_icon_dark_normal_background"
+        android:ems="10"
+        android:hint="EFECTOR"
+        android:inputType="text"
+        android:textColor="#000000"
+        android:textColorHighlight="#4588BC"
+        android:textColorHint="#4A4A4A"
+        android:textColorLink="#4588BC"
+        android:textSize="22sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textViewfechanac2"
+        app:layout_constraintTop_toBottomOf="@+id/textViewfechanac2" />
+
+    <EditText
         android:id="@+id/NOMBRE"
         android:layout_width="240dp"
         android:layout_height="44dp"
@@ -120,14 +138,6 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView6"
         app:srcCompat="@drawable/hospital" />
 
-    <Spinner
-        android:id="@+id/efector"
-        android:layout_width="242dp"
-        android:layout_height="40dp"
-        android:background="#4588BC"
-        app:layout_constraintStart_toStartOf="@+id/textViewfechanac2"
-        app:layout_constraintTop_toBottomOf="@+id/textViewfechanac2" />
-
     <TextView
         android:id="@+id/fecha"
         android:layout_width="wrap_content"
@@ -175,12 +185,11 @@
         android:id="@+id/divider2"
         android:layout_width="290dp"
         android:layout_height="1dp"
-        android:layout_marginTop="5dp"
         android:background="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.537"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/efector" />
+        app:layout_constraintTop_toBottomOf="@+id/EFECTOR" />
 
     <View
         android:id="@+id/divider6"
