--- a/app/src/main/res/layout/spiner_personalizado.xml
+++ b/app/src/main/res/layout/spiner_personalizado.xml
@@ -4,9 +4,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#4588BC"
+    android:background="@drawable/edit_text_1"
     android:gravity="left"
     android:padding="10sp"
-    android:textColor="#ffffff"
 
+    android:textColor="#4A4A4A"
     android:textSize="18sp" />
