--- a/app/src/main/res/layout/alert_nuevo_encuestador.xml
+++ b/app/src/main/res/layout/alert_nuevo_encuestador.xml
@@ -35,7 +35,7 @@
         app:layout_constraintTop_toBottomOf="@+id/EditNuevoEncuestador" />
 
     <Button
-        android:id="@+id/BTNNUEVOENCUESTADOR2"
+        android:id="@+id/BTNNUEVOENCUESTADOR"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
