--- a/app/src/main/res/layout/alert_encuestador.xml
+++ b/app/src/main/res/layout/alert_encuestador.xml
@@ -20,20 +20,20 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/NUEVOENCUESTADOR"
+        android:id="@+id/NUEVOENC"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:background="@drawable/button1"
         android:text="NUEVO"
         android:textColor="#4A4A4A"
-        app:layout_constraintBottom_toBottomOf="@+id/BTNCANCELANE"
+        app:layout_constraintBottom_toBottomOf="@+id/INGRESAR"
         app:layout_constraintEnd_toStartOf="@+id/BTNCANCELANE"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/ENCUESTADOR"
-        app:layout_constraintTop_toTopOf="@+id/BTNCANCELANE" />
+        app:layout_constraintTop_toTopOf="@+id/BTNGUARDAR" />
 
     <Button
-        android:id="@+id/BTNCANCELANE"
+        android:id="@+id/INGRESAR"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -45,7 +45,8 @@
         app:layout_constraintEnd_toEndOf="@+id/ENCUESTADOR"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ENCUESTADOR" />
+        app:layout_constraintTop_toBottomOf="@+id/ENCUESTADOR"
+        app:layout_constraintVertical_bias="0.335" />
 
     <Spinner
         android:id="@+id/ENCUESTADOR"
