--- a/app/src/main/res/layout/alert_nuevo_encuestador.xml
+++ b/app/src/main/res/layout/alert_nuevo_encuestador.xml
@@ -20,10 +20,10 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/BTNCANCELANE"
+        android:id="@+id/CANCELAR"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
         android:text="CANCELAR"
@@ -35,10 +35,9 @@
         app:layout_constraintTop_toBottomOf="@+id/EditNuevoEncuestador" />
 
     <Button
-        android:id="@+id/BTNNUEVOENCUESTADOR"
+        android:id="@+id/GUARDAR"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/button1"
         android:text="GUARDAR"
@@ -46,8 +45,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/EditNuevoEncuestador"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/EditNuevoEncuestador" />
+        app:layout_constraintStart_toEndOf="@+id/CANCELAR"
+        app:layout_constraintTop_toTopOf="@+id/CANCELAR"
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/EditNuevoEncuestador"
